# efibootgen

./: .gitignore  CMakeLists.txt  LICENSE  README.md  disktools.cpp  disktools.h  efibootgen.cpp  efigen.cpp  efigen.sln  efigen.vcxproj  efigen.vcxproj.filters  fat.h  gpt.h  jopts.h  platform.h  status.h
